@@ -1,35 +1,11 @@
-# 选择构建用基础镜像。如需更换，请到[dockerhub官方仓库](https://hub.docker.com/_/java?tab=tags)自行选择后替换。
-FROM maven:3.8.6-jdk-11-slim as build
+# 使用一个轻量级的 Java 基础镜像
+FROM eclipse-temurin:17-alpine
 
-# 指定构建过程中的工作目录
+# 设定工作目录
 WORKDIR /app
 
-# 将src目录下所有文件，拷贝到工作目录中src目录下（.gitignore/.dockerignore中文件除外）
-COPY src /app/src
-
-# 将pom.xml文件，拷贝到工作目录下
-COPY settings.xml pom.xml /app/
-
-# 执行代码编译命令
-# 自定义settings.xml, 选用国内镜像源以提高下载速度
-RUN mvn -s /app/settings.xml -f /app/pom.xml clean package -P prod
-
-# 选择运行时基础镜像
-FROM alpine:3.13
-
-# 安装依赖包，如需其他依赖包，请到alpine依赖包管理(https://pkgs.alpinelinux.org/packages?name=php8*imagick*&branch=v3.13)查找。
-# 选用国内镜像源以提高下载速度
-RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tencent.com/g' /etc/apk/repositories \
-    && apk add --update --no-cache openjdk11-jre \
-    && rm -f /var/cache/apk/*
-# 服务器在北京+8
-RUN apk add tzdata && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo Asia/Shanghai > /etc/timezone
-
-# 指定运行时的工作目录
-WORKDIR /app
-
-# 将构建产物jar包拷贝到运行时目录中
-COPY --from=build /app/target/*.jar .
+# 将构建的 JAR 包复制到容器中
+COPY ./target/apply-room-record.jar apply-room-record.jar
 
 # 暴露端口
 # 此处端口必须与「服务设置」-「流水线」以及「手动上传代码包」部署时填写的端口一致，否则会部署失败。
@@ -38,4 +14,4 @@ EXPOSE 8500
 # 执行启动命令.
 # 写多行独立的CMD命令是错误写法！只有最后一行CMD命令会被执行，之前的都会被忽略，导致业务报错。
 # 请参考[Docker官方文档之CMD命令](https://docs.docker.com/engine/reference/builder/#cmd)
-CMD ["java", "-Xms256m", "-Xmx512m", "-jar", "/app/apply-room-record.jar"]
+CMD ["java", "--add-opens=java.base/java.lang=ALL-UNNAMED", "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED", "-Xms64m", "-Xmx128m", "-jar", "/app/apply-room-record.jar"]
